appliance/base/adapters/network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: adapter
  annotations:
    argocd.argoproj.io/sync-wave: "55"
spec:
  podSelector:
    matchLabels:
      huemie.space/service-role: adapter
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              huemie.space/namespace-role: core
          podSelector:
            matchLabels:
              huemie.space/service-role: device-store
      ports:
        - port: 8080
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
    - to:
        - namespaceSelector:
            matchLabels:
              huemie.space/namespace-role: core
          podSelector:
            matchLabels:
              huemie.space/service-role: device-store
      ports:
        - port: 8080
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.42.0.0/16
              - 10.43.0.0/16
